domain changed => code-share-rbh => pace-lab

--- a/public/src/post.html
+++ b/public/src/post.html
@@ -95,7 +95,7 @@
                 methods: {
                     postButton: function () {
                         // POST request using fetch() 
-                        fetch("https://code-share-rbh.herokuapp.com/code", {
+                        fetch("https://pace-lab.herokuapp.com/code", {
                             method: "POST", // Adding method type 
                             body: JSON.stringify({  // Adding body or contents to send 
                                 "author": this.author,
@@ -106,7 +106,7 @@
                             headers: {  // Adding headers to the request 
                                 "Content-type": "application/json; charset=UTF-8"
                             }
-                        }).then(response => window.location = "https://code-share-rbh.herokuapp.com/"); // redirect after success
+                        }).then(response => window.location = "https://pace-lab.herokuapp.com/"); // redirect after success
                     }
                 },
 
