--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                     codes: [],
                 },
                 created() {
-                    fetch('https://code-share-rbh.herokuapp.com/codes', {
+                    fetch('https://pace-lab.herokuapp.com/codes', {
                         method: 'GET',
                         headers: { 'Content-type': 'application/json;charset=UTF-8' },
                     })
