--- a/public/src/post.html
+++ b/public/src/post.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Stick&display=swap" rel="stylesheet">
     <!-- Vue -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -28,7 +28,7 @@
 
     <div class="container">
         <nav class=" my-nav">
-            <a class="display-4 stickFont" href="/">codeshare</a>
+            <a class="display-4 stickFont" href="/">PaceLab</a>
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
