--- a/guardedPages/admin.html
+++ b/guardedPages/admin.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Stick&display=swap" rel="stylesheet">
     <!-- Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -53,31 +54,7 @@
                     <div class="cardFooter">
                         <span class="text-muted text-italic small"><em>Posted:{{code.posted}}</em></span>
                         <!-- Button trigger modal -->
-                        <button type="button" href="#" class="card-link btn " data-bs-toggle="modal"
-                            :data-bs-target="`#mid${code._id}`">Code</button>
-
-
-                        <!-- Modal -->
-                        <div class="modal" :id="`mid${code._id}`">
-                            <div class="modal-dialog modal-lg ">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <div class="modal-title">{{code.title}}</div>
-
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>{{code.description}}</p>
-                                        <pre><code class="language-c" v-html="code.code">
-
-                                        </code></pre>
-
-                                    </div>
-                                    <div class="modal-footer"></div>
-                                </div>
-                            </div>
-                        </div>
-
+                        <button @click="deleteCode(code._id)" class="card-link btn btn-red ">Delete</button>
                     </div>
                 </div>
             </div>
@@ -119,6 +96,19 @@
                         })
                         .catch((err) => console.log(err));
                 },
+                methods: {
+                    deleteCode: function (codeId) {
+                        console.log(codeId);
+                        fetch(`https://pace-lab.herokuapp.com/codes/${codeId}`, {
+                            method: 'DELETE'
+                        })
+                            .then(res => res.json())
+                            .then(data => {
+                                window.location = "https://pace-lab.herokuapp.com";
+                            })
+                            .catch(err => console.log(err));
+                    }
+                }
             });
         }
 
