--- a/guardedPages/admin.html
+++ b/guardedPages/admin.html
@@ -37,7 +37,7 @@
                 <li class="list-inline-item "><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="./src/about.html">About</a></li>
                 <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
-                <li class="list-inline-item"><a class="live-link" href="/admin">Admin</a></li>
+                <li class="list-inline-item"><a class="link-live" href="/admin">Admin</a></li>
             </ul>
         </nav>
 
