--- a/guardedPages/admin.html
+++ b/guardedPages/admin.html
@@ -96,7 +96,7 @@
                 },
                 methods: {
                     deleteCode: function (codeId) {
-                        console.log(codeId);
+                        // console.log(codeId);
                         fetch(`https://pace-lab.herokuapp.com/codes/${codeId}`, {
                             method: 'DELETE'
                         })
