--- a/guardedPages/admin.html
+++ b/guardedPages/admin.html
@@ -11,14 +11,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Stick&display=swap" rel="stylesheet">
     <!-- Vue -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
+
+    <!-- fontawesome for icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
 
     <!-- prism-js for code highlighting -->
     <link rel="stylesheet" href="./src/prism.css">
@@ -30,7 +33,7 @@
 <body>
 
     <div class="container">
-        <nav class=" my-nav">
+        <nav class="my-nav">
             <a class="display-4 stickFont" href="/">PaceLab</a>
             <ul class="list-inline pt-4 light">
 
@@ -40,6 +43,12 @@
                 <li class="list-inline-item"><a class="link-live" href="/admin">Admin</a></li>
             </ul>
         </nav>
+        <div class="admin-control-panel">
+            <a><span class="fas fa-database"> </span>Database
+            </a>
+            <a><span class="fas fa-trash">
+                </span>Recently-Deleted </a>
+        </div>
 
 
         <section id="adminPage">
@@ -105,7 +114,7 @@
                                 window.location = "https://pace-lab.herokuapp.com";
                             })
                             .catch(err => console.log(err));
-                    }
+                    },
                 }
             });
         }
