--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                     <div class="cardFooter">
                         <span class="text-muted text-italic small"><em>Posted:{{code.posted}}</em></span>
                         <!-- Button trigger modal -->
-                        <button type="button" href="#" class="card-link btn " data-bs-toggle="modal"
+                        <button type="button" href="#" class="btn btn-green" data-bs-toggle="modal"
                             :data-bs-target="`#mid${code._id}`">Code</button>
 
 
