--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,14 @@
 
         <div class="sem-section">
             <ul>
-                <li><a href="">Sem1</a></li>
-                <li><a href="">Sem2</a></li>
-                <li><a href="">Sem3</a></li>
-                <li><a href="">Sem4</a></li>
-                <li><a href="">Sem5</a></li>
-                <li><a href="">Sem6</a></li>
-                <li><a href="">Sem7</a></li>
-                <li><a href="">Sem8</a></li>
+                <li><a href="#">Sem1</a></li>
+                <li><a href="#">Sem2</a></li>
+                <li><a href="#">Sem3</a></li>
+                <li><a href="#">Sem4</a></li>
+                <li><a href="#">Sem5</a></li>
+                <li><a href="#">Sem6</a></li>
+                <li><a href="#">Sem7</a></li>
+                <li><a href="#">Sem8</a></li>
             </ul>
         </div>
 
