commented sem-section nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             </ul>
         </nav>
 
-        <div class="sem-section">
+        <!-- <div class="sem-section">
             <ul>
                 <li><a href="#">Sem1</a></li>
                 <li><a href="#">Sem2</a></li>
@@ -51,7 +51,7 @@
                 <li><a href="#">Sem7</a></li>
                 <li><a href="#">Sem8</a></li>
             </ul>
-        </div>
+        </div> -->
 
 
         <section id="homePage">
