site under maintenance

--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,9 @@
     </div>
 
     <script>
+
+        alert("site under maintenance");
+
         window.addEventListener('load', async function () {
             await loaded();
         });
