mvp: select different semesters and filter subjects

--- a/public/src/post.html
+++ b/public/src/post.html
@@ -140,7 +140,7 @@
                                     "description": this.description,
                                     "code": this.code,
                                     "sem": this.sem,
-                                    "tag": this.tag
+                                    "tag": this.tag.toLowerCase()
                                 }),
                                 headers: {  // Adding headers to the request 
                                     "Content-type": "application/json; charset=UTF-8"
