bugfix: post request was to localhost

--- a/public/src/post.html
+++ b/public/src/post.html
@@ -132,7 +132,7 @@
 
                         if (this.formValidation()) {
                             //POST request using fetch() 
-                            fetch("http://localhost:3000/code", {
+                            fetch("https://pace-lab.herokuapp.com/code", {
                                 method: "POST", // Adding method type 
                                 body: JSON.stringify({  // Adding body or contents to send 
                                     "author": this.author,
