--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
 
                 },
                 created() {
-                    fetch('https://pace-lab.herokuapp.com/codes', {
+                    fetch('https://pace-lab.onrender.com/codes', {
                         method: 'GET',
                         headers: { 'Content-type': 'application/json;charset=UTF-8' },
                     })
