--- a/public/src/about.html
+++ b/public/src/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Tools</title>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -32,7 +32,7 @@
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
-                <li class="list-inline-item"><a class="link-live" href="./about.html">About</a></li>
+                <li class="list-inline-item"><a class="link-live" href="./about.html">Tools</a></li>
                 <li class="list-inline-item"><a href="./post.html">Post</a></li>
                 <li class="list-inline-item"><a href="/admin">Admin</a></li>
             </ul>
@@ -47,8 +47,8 @@
         <section id="about-section">
 
             <div class="content-about">
-                <h4>Making of the site</h4>
-                <p>A quick place to save your code for sharing or for future reference </p>
+                <h6>1. Send Mails with our service <a href="https://pace-mail-service.onrender.com/"> go to site</a>
+                </h6>
             </div>
         </section>
 
