--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             <ul class="list-inline light">
 
                 <li class="list-inline-item "><a class="link-live" href="/">Home</a></li>
-                <li class="list-inline-item"><a href="./src/about.html">About</a></li>
+                <li class="list-inline-item"><a href="./src/about.html">Tools</a></li>
                 <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
                 <li class="list-inline-item"><a href="./admin">Admin</a></li>
             </ul>
