--- a/public/src/login.html
+++ b/public/src/login.html
@@ -32,7 +32,7 @@
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
-                <li class="list-inline-item"><a href="./src/about.html">About</a></li>
+                <li class="list-inline-item"><a href="./src/about.html">Tools</a></li>
                 <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
                 <li class="list-inline-item"><a class="link-live" href="/admin">Admin</a></li>
             </ul>
