--- a/public/index.html
+++ b/public/index.html
@@ -1,202 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Stick&display=swap" rel="stylesheet">
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    <!-- fontawesome for icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
-    <!-- Vue -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.js"></script>
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
-
-    <!-- prism-js for code highlighting -->
-    <link rel="stylesheet" href="./src/prism.css">
-    <script src="./src/prism.js"></script>
-    <!-- my styles -->
-    <link rel="stylesheet" href="./src/style.css">
-</head>
-
-<body>
-
-    <div class="container">
-        <nav class=" my-nav">
-            <a class="display-4 stickFont" href="">PaceLab</a>
-            <ul class="list-inline light">
-
-                <li class="list-inline-item "><a class="link-live" href="/">Home</a></li>
-                <li class="list-inline-item"><a href="./src/about.html">Tools</a></li>
-                <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
-                <li class="list-inline-item"><a href="./admin">Admin</a></li>
-            </ul>
-        </nav>
-
-
-        <section id="homePage">
-            <div class="sem-section">
-                <ul>
-                    <li><a href="#" @click="sem=3">Sem3</a></li>
-                    <li><a href="#" @click="sem=4">Sem4</a></li>
-                    <li><a href="#" @click="sem=5">Sem5</a></li>
-                    <li><a href="#" @click="sem=6">Sem6</a></li>
-                    <li><a href="#" @click="sem=7">Sem7</a></li>
-                    <li><a href="#" @click="sem=8">Sem8</a></li>
-
-
-                </ul>
-
-                <ul>
-                    <span class="fas fa-filter "></span>
-                    <li v-for="tag,index in filter" class="sem-filter-tags" :key="index" @click="filterCode(tag)">
-                        {{tag}}</li>
-                </ul>
-            </div>
-
-
-
-            <div class="cards-section">
-
-                <div v-for="code in domRender" :key="code._id" class="card" style="width: 20rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">{{code.title}}</h5>
-                        <h6 class="card-subtitle mb-1 mx-3 text-muted">@{{code.author}}</h6>
-                        <p class="card-text">{{code.description}}</p>
-                        <div class="cardFooter">
-                            <div>
-                                <span class="text-muted text-italic small"><em>Sub:
-                                        {{(code.tag).toUpperCase()}}</em></span>
-                                <br>
-                                <span class="text-muted text-italic small"><em>Posted:{{code.posted}}</em></span>
-                            </div>
-
-
-                            <!-- Button trigger modal -->
-                            <button type="button" href="#" class="btn btn-green" data-bs-toggle="modal"
-                                :data-bs-target="`#mid${code._id}`">Code</button>
-
-
-                            <!-- Modal -->
-                            <div class="modal" :id="`mid${code._id}`">
-                                <div class="modal-dialog modal-lg ">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <div class="modal-title">{{code.title}}</div>
-
-                                            <div>
-                                                <button type="button" :id="code._id" class="btn btn-copy"
-                                                    @click="copyToClipboard(code._id)"> Copy
-                                                </button>
-
-                                                <button type="button" class="btn-close"
-                                                    data-bs-dismiss="modal"></button>
-                                            </div>
-
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>{{code.description}}</p>
-                                            <pre><code class="language-c" v-html="code.code">
-
-                                        </code></pre>
-
-                                        </div>
-                                        <div class="modal-footer"></div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <script>
-        window.addEventListener('load', async function () {
-            await loaded();
-        });
-
-        async function loaded() {
-            var homePage = await new Vue({
-                el: '#homePage',
-                data: {
-                    codes: [],
-                    domRender: [],
-                    sem: 1,
-                    filter: []
-
-                },
-                created() {
-                    fetch('https://pace-lab.onrender.com/codes', {
-                        method: 'GET',
-                        headers: { 'Content-type': 'application/json;charset=UTF-8' },
-                    })
-                        .then((response) => response.json())
-                        .then((json) => {
-                            this.codes = json;
-
-                            // preprocessing data for UI
-                            this.codes.forEach(e => {
-                                // < > changing this to appropriate codes
-                                e.code = e.code.replaceAll('<', '&lt;');
-                                e.code = e.code.replaceAll('>', '&gt;');
-                                // getting the date for use date-month-year
-                                e.posted = new Date(e.date)
-                                e.posted = e.posted.toDateString();
-                            });
-
-                            this.sem = 4;
-                        })
-                        .catch((err) => console.log(err));
-                },
-                methods: {
-                    copyToClipboard: function (codeId) {
-                        let codeToClipboard = this.codes.find(code => code._id == codeId);
-                        codeToClipboard = codeToClipboard.code.replaceAll('&lt;', '<');
-                        codeToClipboard = codeToClipboard.replaceAll('&gt;', '>');
-                        console.log(codeToClipboard);
-                        navigator.clipboard.writeText(codeToClipboard);
-
-                        const copyBtn = document.getElementById(codeId);
-                        copyBtn.innerHTML = "Copied";
-
-                    },
-                    filterCode: function (tag) {
-                        this.domRender = this.codes.filter(code => code.tag == tag);
-                    }
-                },
-                watch: {
-                    sem: function (sem) {
-                        tags = [];
-                        this.filter = [];
-                        this.domRender = []; // clear DOM
-                        this.codes.forEach(code => {
-                            if (sem == code.sem) {
-                                tags.push(code.tag)
-                                this.domRender.push(code);
-                            }
-                        })
-                        this.filter = [...new Set(tags)];
-                    }
-                }
-
-            });
-        }
-
-    </script>
-</body>
-
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
